# paddleocr-invoice-extractor

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
app/: config.py  desensitize.py  errors.py  main.py  ocr.py  schemas.py  template.py
app/static/: app.js  index.html  styles.css
scripts/: privacy_scan.py
tests/: test_api.py  test_config.py  test_desensitize.py  test_errors.py  test_frontend.py  test_ocr.py  test_privacy.py  test_schemas.py  test_template.py
